<resources>
    <string name="app_name">SummerPractice</string>

    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="main">Main</string>


    <string name="empty_field">Field is empty</string>
    <string name="wrong_pass">Wrong password</string>
    <string name="user_not_found">User not found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
